<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">ShareWear</string>

    <!-- Actions -->
    <string name="add_contact">Add Contact</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="contact_details">Contact Details</string>

    <!-- Notifications -->
    <string name="request_title">Location request</string>
    <string name="request_message">is requesting your location</string>

    <!-- LoginActivity -->
    <string name="sign_in_button_text">Sign In with Google+</string>
    <string name="play_services_error">
        Google Play Services is not available. This application will close.
    </string>

    <!-- WelcomeActivity -->
    <string name="welcome_title">Welcome to ShareWear</string>
    <string name="welcome_info">
        Set up your local profile to have a name, phone number, and email.
        This information can be shared with new contacts.
    </string>
    <string name="welcome_button">Go to Profile Setup</string>

    <!-- ContactsListActivity -->
    <string name="search_contacts">Search contacts</string>
    <string name="favorites">Favorites</string>
    <string name="all_contacts">All Contacts</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_favorites_desc">
        Add a contact to Favorites by starring them on their info page.
    </string>

    <!-- ContactAddNFCActivity -->
    <string name="nfc_description">
        Use NFC to exchange your contact information with someone else. Bring your phones together
        and tap the screen.
    </string>
    <string name="nfc_prompt_title">NFC is turned off</string>
    <string name="nfc_prompt">
        NFC must be turned on in order to exchange contact information. Turn it on in Settings.
    </string>
    <string name="switch_to_manual">Switch to Manual Input</string>
    <string name="nfc_input_title">Input via NFC</string>

    <!-- ContactAddActivity -->
    <string name="input_name">Name</string>
    <string name="input_phone">Phone</string>
    <string name="input_email">Email</string>
    <string name="switch_to_nfc">Switch to NFC Input</string>
    <string name="okay">OK</string>
    <string name="error_name_blank">The name field cannot be left blank.</string>
    <string name="error_detail_blank">
        At least one of the phone or email fields must be filled out.
    </string>

    <!-- ContactAddDoneActivity -->
    <string name="phone_empty">No phone number</string>
    <string name="email_empty">No email address</string>

    <!-- ContactViewActivity -->
    <string name="location_loading">Loading...</string>
    <string name="location_not_a_user">Not a ShareWear user</string>
    <string name="location_navigate">Navigate to current location</string>
    <string name="location_request">Request current location</string>
    <string name="location_request_sent">Location request sent!</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="added_favorite">Contact added to favorites</string>
    <string name="remove_favorite">Remove from Favorites</string>
    <string name="removed_favorite">Contact removed from favorites</string>

    <!-- MyLocationActivity -->
    <string name="not_sharing_location">Currently Not Sharing</string>
    <string name="sharing_location">Now Sharing Location</string>
    <string name="share_my_location">Share My Location</string>
    <string name="sharing_off_toast">Location sharing has been turned off</string>
    <string name="sharing_on_toast">Location sharing started.</string>

    <string name="start_sharing_prompt_title">Start sharing location?</string>
    <string name="start_sharing_prompt">
        Your location history will be shared with all contacts for the next 15 minutes or until
        you stop sharing.
    </string>
    <string name="stop_sharing_prompt_title">Stop sharing location?</string>
    <string name="stop_sharing_prompt">Leaving this screen will stop location sharing.</string>
    <string name="gps_prompt_title">GPS is turned off</string>
    <string name="gps_prompt">
        GPS must be turned on to share your location. Turn it on in Settings
    </string>
    <string name="notification_title">Location sharing enabled</string>
    <string name="notification_text">Touch to stop sharing.</string>

    <!-- Preferences -->
    <string name="pref_user">pref_user</string>
    <string name="pref_contact_details">pref_contact_details</string>
    <string name="pref_gcm_token">pref_gcm_token</string>

    <string name="SENDER_ID">283481130565</string>

</resources>
