<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:background="#ffffff">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollview">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="1"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:windowActionBar="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="false">

            <ImageView
                android:layout_width="207dp"
                android:layout_height="191dp"
                android:id="@+id/nfc_image"
                android:src="@mipmap/ic_intro_picture"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_picture_button"
                android:src="@mipmap/ic_camera"
                android:layout_alignBottom="@+id/nfc_image"
                android:layout_alignEnd="@+id/nfc_image"
                android:focusableInTouchMode="false" />


        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:windowActionBar="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_below="@+id/nfc_image">

            <!-- Dummy item to prevent EditTexts from receiving focus. -->
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/input_name"
                android:ems="10"
                android:nextFocusUp="@+id/person_name"
                android:nextFocusLeft="@+id/person_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/person_phone"
                android:hint="@string/input_phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/person_email"
                android:hint="@string/input_email" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_to_nfc"
                android:id="@+id/nfc_input_button"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                />
        </LinearLayout>

    </GridLayout>

</ScrollView>
    </RelativeLayout>
