<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowActionBar="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:id="@+id/background"
        android:src="@mipmap/nfc_blank"
        android:layout_alignParentTop="true"
        android:layout_weight="0.26"
        android:layout_gravity="center_horizontal"
        android:background="#ff69ede0"
        android:adjustViewBounds="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:windowActionBar="false"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/welcome_image"
            android:src="@mipmap/contact_card"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal|top"
            android:background="#ff69ede0"
            android:adjustViewBounds="false"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:id="@+id/welcome_title"
            android:paddingTop="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textSize="26dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_info"
            android:id="@+id/welcome_info"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textSize="16dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:textColor="#999999"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:divider="@android:color/background_light"
        android:background="@drawable/border_top"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginRight="-1dp"
        android:padding="0dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_button"
            android:id="@+id/profile_setup_button"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="true"
            android:textColor="#777777"
            android:textStyle="normal"
            android:textSize="16dp"
            android:elegantTextHeight="false"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="sans-serif-light"
            android:padding="0dp"/>
    </LinearLayout>

</RelativeLayout>
